[project]
name = "cryptograms-tools"
version = "0.1.0"
description = ""
authors = [
    {name = "Stefano Di Pasquale",email = "stefaniscion@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "click (>=8.3.1,<9.0.0)"
]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
cryptograms-tool = "cryptograms_tools.main:main"
